--- a/home.html
+++ b/home.html
@@ -1,18 +1,119 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <link rel="stylesheet" href="user.css">
-    <link rel="icon" href="images/BB.ico">
-    <title>BalanceBuddy</title>
+    <title>BalanceBuddy - Home</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"> </script>
+    <style rel="spreadsheet"> 
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Poppins', sans-serif;
+            background-color: #f0f8ff;
+        }
+
+        .container {
+            display: flex;
+            height: 100vh;
+            overflow: hidden;
+        }
+
+        /* Sidebar Styling */
+        .sidebar  {
+            background-color: #007acc;
+            color: white;
+            width: 80px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px 0;
+        }
+
+        .menu-icon {
+            margin-top: 10px;
+            font-size: 24px;
+            cursor: pointer;
+        }
+
+        .sidebar-icons {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 50px;
+            margin-top: 30px;
+        }
+
+        .sidebar-icons {
+            font-size: 28px;
+            cursor: pointer;
+            
+        }
+
+        .sidebar-icons :hover {
+            transition: transform 0.7s ease-out;
+            transform: scale(1.1);
+        }
+
+        .settings {
+            margin-bottom: 10px;
+        }
+
+        .settings  {
+            font-size: 28px;
+            cursor: pointer;
+            transition: transform 0.3s ease-in-out;
+        }
+
+        .settings :hover {
+            transform: scale(1.2);
+        }
+
+        /* Main Content Styling */
+        .main-content {
+            flex: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        }
+
+        .main-content h1 {
+            font-size: 3rem;
+            color: #007acc;
+        }
+    </style>
 </head>
 <body>
-    <div class="profile-btn">
-        <a href="user.html">
-            <i class="fas fa-user"></i> Profile
-        </a>
+    <div class="container">
+        <!-- Sidebar -->
+        <div class="sidebar">
+            <!-- Menu Icon -->
+            <div class="menu-icon">
+                <i class="fas fa-bars"></i>
+            </div>
+
+            <!-- Sidebar Icons -->
+            <div class="sidebar-icons">
+                <i class="fas fa-user-friends" title="Friends"></i>
+                <i class="fas fa-comments" title="Chat"></i>
+            </div>
+
+            <!-- Settings Icon -->
+            <div class="settings">
+                <i class="fas fa-cog" title="Settings"></i>
+            </div>
+        </div>
+
+        <!-- Main Content -->
+        <div class="main-content">
+            <h1>Welcome to BalanceBuddy</h1>
+        </div>
     </div>
 </body>
 </html>
