--- a/chat.html
+++ b/chat.html
@@ -13,12 +13,12 @@
 
 <body>
     <!-- Button to Create Room -->
-    <div class="roomOptions">
+    <div id="roomOptionslass="roomOptions">
         <button id="createRoomBtn">Create Room</button>
         <input type="text" id="roomIdInput" placeholder="Enter Room ID" />
         <button id="joinRoomBtn">Join Room</button>
     </div>
-    <div class="chatContainer"">
+    <div id="chatContainer" class="chatContainer" style="display: none;">
         <div class="chat-container">
             <header>
                 <h2>Chat Room</h2>
